--- a/app/src/components/SectionTitle/SectionTitle.css
+++ b/app/src/components/SectionTitle/SectionTitle.css
@@ -1,19 +1,17 @@
 
 .section-title{
-    color:rgb(0, 0, 0);
     font-size: 24px;
     font-weight: bold;
-    margin: 0%;
-    padding: 0%;    
+    margin: 0;
+    
 
 }
 
 .section-description{
-    color: rgb(0, 0, 0);    
     font-size: 16px;
     font-style: normal;
     font-weight: normal;
     margin: 8px 0;
-    padding: 0%;
+
 }
 
